tdf#104581 handle constraints for NEGBINOMDIST in compliance with ODFF1.2.

Also changed varaiable names for easier understanding of their meaning.

Change-Id: I7c6f338c04898c7b07ebeb97fb331d51fa691f5b
Reviewed-on: https://gerrit.libreoffice.org/31910
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>
(cherry picked from commit 245b615400904274e264d5051baf63b3613db935)
Reviewed-on: https://gerrit.libreoffice.org/32087